Bug 369214 - Keyboard "Lock" keys (Caps/Num/Scroll) leds not turning on.
Summary: Keyboard "Lock" keys (Caps/Num/Scroll) leds not turning on.
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: libinput (other bugs)
Version First Reported In: 5.8.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D2943
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-23 00:24 UTC by Tony
Modified: 2016-10-17 06:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.2
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2016-09-23 00:24:50 UTC
On wayland the leds for "Lock" keys (Caps/Num/Scroll) are always off. In the case of Num Lock, the option to turn it on on plasma startup is not being honored either.

I have one of the "supported" keyboards DELL SK-8135, and none of this happens on X.

Reproducible: Always
Comment 1 Martin Flöser 2016-10-05 09:54:20 UTC
Addressed with https://phabricator.kde.org/D2943
Comment 2 Martin Flöser 2016-10-05 13:54:22 UTC
The issue is not yet fixed, it will be fixed once the change gets pushed and that will automatically update the bug report :-)
Comment 3 Martin Flöser 2016-10-17 06:03:15 UTC
Git commit 4c7752c965ab9e10ddb18b10077bdb4cdd52df6f by Martin Gräßlin.
Committed on 17/10/2016 at 06:01.
Pushed by graesslin into branch 'Plasma/5.8'.

Support LEDs in Xkb and libinput

Summary:
The Xkb implementation starts to track the state of the LEDs in the
keymap and emits a signal whenever the LEDs change. This signal is
connected to a method in LibInput::Connection which updates the led
state on all devices and uses it to init the state of the led when a new
device gets connected.
FIXED-IN: 5.8.2

Test Plan: Connected a keyboard with LEDs and enabled NumLock and ScrollLock.

Reviewers: #kwin, #plasma_on_wayland

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D2943

M  +2    -0    input.cpp
M  +27   -0    keyboard_input.cpp
M  +21   -0    keyboard_input.h
M  +33   -0    libinput/connection.cpp
M  +4    -0    libinput/connection.h

http://commits.kde.org/kwin/4c7752c965ab9e10ddb18b10077bdb4cdd52df6f