input.cpp
@@ -1233,7 +1233,9 @@ void InputRedirection::setupLibInput()
     m_libInput = conn;
     if (conn) {
         conn->setInputConfig(m_inputConfig);
+        conn->updateLEDs(m_keyboard->xkb()->leds());
         conn->setup();
+        connect(m_keyboard, &KeyboardInputRedirection::ledsChanged, conn, &LibInput::Connection::updateLEDs);
         connect(conn, &LibInput::Connection::eventsRead, this,
             [this] {
                 m_libInput->processEvents();
